syntax = "proto3";

package blockjoy.api.v1;

message Parameter {
    string name = 1;
    string value = 2;
}

message ContainerImage {
    /* Define config status */
    enum StatusName {
        UndefinedStatusName = 0;
        Development = 1;
        Unstable = 2;
        Stable = 3;
    }

    /* snake_cased name of the blockchain */
    string protocol = 1;
    /* snake_cased name of the node type */
    string node_type = 2;
    /* semantic version string of the node type version */
    string node_version = 3;
    StatusName status = 4;
}
